@@ -58,21 +58,22 @@
   <ul>
 <li><a class="reference internal" href="#">News</a><ul>
 <li><a class="reference internal" href="#sqlobject-3-2-0-master">SQLObject 3.2.0 (master)</a><ul>
+<li><a class="reference internal" href="#documentation">Documentation</a></li>
 <li><a class="reference internal" href="#tests">Tests</a></li>
 </ul>
 </li>
 <li><a class="reference internal" href="#sqlobject-3-1-0">SQLObject 3.1.0</a><ul>
 <li><a class="reference internal" href="#features">Features</a></li>
-<li><a class="reference internal" href="#documentation">Documentation</a></li>
+<li><a class="reference internal" href="#id1">Documentation</a></li>
 <li><a class="reference internal" href="#source-code">Source code</a></li>
-<li><a class="reference internal" href="#id1">Tests</a></li>
+<li><a class="reference internal" href="#id2">Tests</a></li>
 </ul>
 </li>
 <li><a class="reference internal" href="#sqlobject-3-0-0">SQLObject 3.0.0</a><ul>
-<li><a class="reference internal" href="#id2">Features</a></li>
+<li><a class="reference internal" href="#id3">Features</a></li>
 <li><a class="reference internal" href="#minor-features">Minor features</a></li>
 <li><a class="reference internal" href="#development">Development</a></li>
-<li><a class="reference internal" href="#id3">Documentation</a></li>
+<li><a class="reference internal" href="#id4">Documentation</a></li>
 </ul>
 </li>
 </ul>
@@ -115,23 +116,24 @@
 <div class="contents topic" id="contents">
 <p class="topic-title first">Contents:</p>
 <ul class="simple">
-<li><a class="reference internal" href="#news" id="id5">News</a><ul>
-<li><a class="reference internal" href="#sqlobject-3-2-0-master" id="id6">SQLObject 3.2.0 (master)</a><ul>
-<li><a class="reference internal" href="#tests" id="id7">Tests</a></li>
+<li><a class="reference internal" href="#news" id="id6">News</a><ul>
+<li><a class="reference internal" href="#sqlobject-3-2-0-master" id="id7">SQLObject 3.2.0 (master)</a><ul>
+<li><a class="reference internal" href="#documentation" id="id8">Documentation</a></li>
+<li><a class="reference internal" href="#tests" id="id9">Tests</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#sqlobject-3-1-0" id="id8">SQLObject 3.1.0</a><ul>
-<li><a class="reference internal" href="#features" id="id9">Features</a></li>
-<li><a class="reference internal" href="#documentation" id="id10">Documentation</a></li>
-<li><a class="reference internal" href="#source-code" id="id11">Source code</a></li>
-<li><a class="reference internal" href="#id1" id="id12">Tests</a></li>
+<li><a class="reference internal" href="#sqlobject-3-1-0" id="id10">SQLObject 3.1.0</a><ul>
+<li><a class="reference internal" href="#features" id="id11">Features</a></li>
+<li><a class="reference internal" href="#id1" id="id12">Documentation</a></li>
+<li><a class="reference internal" href="#source-code" id="id13">Source code</a></li>
+<li><a class="reference internal" href="#id2" id="id14">Tests</a></li>
 </ul>
 </li>
-<li><a class="reference internal" href="#sqlobject-3-0-0" id="id13">SQLObject 3.0.0</a><ul>
-<li><a class="reference internal" href="#id2" id="id14">Features</a></li>
-<li><a class="reference internal" href="#minor-features" id="id15">Minor features</a></li>
-<li><a class="reference internal" href="#development" id="id16">Development</a></li>
-<li><a class="reference internal" href="#id3" id="id17">Documentation</a></li>
+<li><a class="reference internal" href="#sqlobject-3-0-0" id="id15">SQLObject 3.0.0</a><ul>
+<li><a class="reference internal" href="#id3" id="id16">Features</a></li>
+<li><a class="reference internal" href="#minor-features" id="id17">Minor features</a></li>
+<li><a class="reference internal" href="#development" id="id18">Development</a></li>
+<li><a class="reference internal" href="#id4" id="id19">Documentation</a></li>
 </ul>
 </li>
 </ul>
@@ -140,6 +142,12 @@
 </div>
 <div class="section" id="sqlobject-3-2-0-master">
 <span id="start"></span><h2>SQLObject 3.2.0 (master)<a class="headerlink" href="#sqlobject-3-2-0-master" title="Permalink to this headline">¶</a></h2>
+<div class="section" id="documentation">
+<h3>Documentation<a class="headerlink" href="#documentation" title="Permalink to this headline">¶</a></h3>
+<ul class="simple">
+<li>The docs are now generated with Sphinx.</li>
+</ul>
+</div>
 <div class="section" id="tests">
 <h3>Tests<a class="headerlink" href="#tests" title="Permalink to this headline">¶</a></h3>
 <ul class="simple">
@@ -164,8 +172,8 @@ Requires psycopg2 &gt;= 2.5.4 and PostgreSQL &gt;= 9.2.</li>
 mxDateTime.Time.</li>
 </ul>
 </div>
-<div class="section" id="documentation">
-<h3>Documentation<a class="headerlink" href="#documentation" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id1">
+<h3>Documentation<a class="headerlink" href="#id1" title="Permalink to this headline">¶</a></h3>
 <ul class="simple">
 <li>Developer&#8217;s Guide is extended to explain SQLObject architecture
 and how to create a new column type.</li>
@@ -179,8 +187,8 @@ and how to create a new column type.</li>
 <li>Fix all <cite>import *</cite> using <a class="reference external" href="https://github.com/zestyping/star-destroyer">https://github.com/zestyping/star-destroyer</a>.</li>
 </ul>
 </div>
-<div class="section" id="id1">
-<h3>Tests<a class="headerlink" href="#id1" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id2">
+<h3>Tests<a class="headerlink" href="#id2" title="Permalink to this headline">¶</a></h3>
 <ul class="simple">
 <li>Tests are now run at Circle CI.</li>
 <li>Use pytest-cov for test coverage. Report test coverage
@@ -192,8 +200,8 @@ via coveralls.io and codecov.io.</li>
 <div class="section" id="sqlobject-3-0-0">
 <h2>SQLObject 3.0.0<a class="headerlink" href="#sqlobject-3-0-0" title="Permalink to this headline">¶</a></h2>
 <p>Released 1 Jun 2016.</p>
-<div class="section" id="id2">
-<h3>Features<a class="headerlink" href="#id2" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id3">
+<h3>Features<a class="headerlink" href="#id3" title="Permalink to this headline">¶</a></h3>
 <ul class="simple">
 <li>Support for Python 2 and Python 3 with one codebase!
 (Python version &gt;= 3.4 currently required.)</li>
@@ -211,8 +219,8 @@ via coveralls.io and codecov.io.</li>
 <li>Source code was made flake8-clean.</li>
 </ul>
 </div>
-<div class="section" id="id3">
-<h3>Documentation<a class="headerlink" href="#id3" title="Permalink to this headline">¶</a></h3>
+<div class="section" id="id4">
+<h3>Documentation<a class="headerlink" href="#id4" title="Permalink to this headline">¶</a></h3>
 <ul class="simple">
 <li>Documentation is published at <a class="reference external" href="http://sqlobject.readthedocs.org/">http://sqlobject.readthedocs.org/</a> in
 Sphinx format.</li>
